<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".sign_In">


    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imglogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eating_korean_food_bro" />

    <TextView
        android:id="@+id/Appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:text="@string/Appname"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogo" />

    <TextView
        android:id="@+id/textdeliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="177dp"
        android:text="@string/textdeliver"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Appname" />

    <TextView
        android:id="@+id/logintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/logintitle"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textdeliver"
        app:layout_constraintStart_toStartOf="@+id/textdeliver"
        app:layout_constraintTop_toBottomOf="@+id/textdeliver" />

    <EditText
        android:id="@+id/email"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/envelope"
        android:drawablePadding="15dp"
        android:elevation="10dp"
        android:fontFamily="@font/lato"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="@+id/logintitle"
        app:layout_constraintStart_toStartOf="@+id/logintitle"
        app:layout_constraintTop_toBottomOf="@+id/logintitle" />

    <EditText
        android:id="@+id/password"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="10dp"
        android:fontFamily="@font/lato"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />



    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />
    <TextView
        android:id="@+id/continue_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/continue_with"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/or"
        app:layout_constraintStart_toStartOf="@+id/or"
        app:layout_constraintTop_toBottomOf="@+id/or" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/colorwhite"
        android:drawableLeft="@drawable/facebook"
        android:fontFamily="@font/lato"
        android:paddingLeft="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/continue_with"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_with" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/colorwhite"
        android:drawableLeft="@drawable/google"
        android:fontFamily="@font/lato"
        android:paddingLeft="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_with" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="131dp"
        android:background="@drawable/coloyellow"
        android:fontFamily="@font/lato_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google" />

    <TextView
        android:id="@+id/newa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/newa"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />


    <TextView
        android:id="@+id/footnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/footnote"
        android:textAlignment="center"
        android:textColor="#FFEA00"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>