<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:backgroundTint="@color/yellow"
    tools:context=".ChooseLocation"
    >

    <TextView
        android:id="@+id/chooseloaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/choose_your_location"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bordercolor"
        android:elevation="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/down"
        app:endIconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/chooseloaction">

        <AutoCompleteTextView
            android:id="@+id/listoflocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:inputType="none"
            android:text="@string/listoflocation"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/description1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bordercolor"
        android:elevation="10dp"
        android:fontFamily="@font/lato"
        android:padding="20dp"
        android:text="@string/description"
        android:textAlignment="gravity"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationdescription"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/locationdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:elevation="10dp"
        android:fontFamily="@font/lato_bold"
        android:padding="5dp"
        android:text="@string/choose_your_way"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/footnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/footnote"
        android:textAlignment="center"
        android:textColor="#FFEA00"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/move"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bordercolor"
        android:contentDescription="@string/burger"
        android:padding="9dp"
        app:layout_constraintBottom_toTopOf="@+id/locationdescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationInputLayout"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/loct"
        app:tint="@color/yellow" />

<!--    <Button-->
<!--        android:id="@+id/Way"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:backgroundTint="@color/yellow"-->
<!--        android:drawableRight="@drawable/baseline_arrow_forward_24"-->
<!--        android:drawableTint="@color/white"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/way"-->
<!--        android:textColor="@color/yellow"-->
<!--        android:textSize="34sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/description" />-->

    <TextView
        android:id="@+id/move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/move"
        android:textColor="@color/yellow"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description1" />


</androidx.constraintlayout.widget.ConstraintLayout>
